# sqllogictest-rs

./: Cargo.toml
sqllogictest/: Cargo.toml
sqllogictest-bin/: Cargo.toml
sqllogictest-bin/src/: engines.rs  main.rs
sqllogictest-engines/: Cargo.toml
sqllogictest-engines/src/: postgres.rs
sqllogictest-engines/src/postgres/: error.rs  extended.rs  simple.rs
sqllogictest/src/: connection.rs  harness.rs  lib.rs  parser.rs  runner.rs  substitution.rs
tests/: Cargo.toml  harness.rs
tests/async/: async.rs
tests/custom_type/: custom_type.rs
tests/let/: basic.slt  let_test.rs
tests/no_run/: async.slt  nowait.slt
tests/nowait/: nowait.rs
tests/slt/: basic.slt  simple_query.slt
tests/substitution/: substitution.rs
tests/system_command/: system_command.rs
tests/test_dir_escape/: test_dir_escape.rs
tests/validator/: validator.rs
