[workspace]
resolver = "2"
members = ["sqllogictest", "sqllogictest-bin", "sqllogictest-engines", "tests"]

[workspace.package]
version = "0.28.3"
edition = "2021"
homepage = "https://github.com/risinglightdb/sqllogictest-rs"
keywords = ["sql", "database", "parser", "cli"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/risinglightdb/sqllogictest-rs"

# Each dependency should be pinned with it's minor version.
# Update of minor version must be done *manually*.
# Update of patch version can be done with `cargo vendor`. 
[workspace.dependencies]
async-trait = "0.1.0"
educe = "0.6.0"
fs-err = "3.1.0"
futures = "0.3.0"
glob = "0.3.0"
humantime = "2.3.0"
itertools = "0.13.0" # TODO update to 0.14
libtest-mimic = "0.8.0"
md-5 = "0.10.0"
owo-colors = "4.2.0"
rand = "0.8.5" # TODO update to 0.9
regex = "1.11.0"
similar = "2.7.0"
subst = "0.3.0"
tempfile = "3.23.0"
thiserror = "2.0.0"
tracing = "0.1.0"