[workspace]
resolver = "2"
members = ["sqllogictest", "sqllogictest-bin", "sqllogictest-engines", "tests"]

[workspace.package]
version = "0.28.3"
edition = "2021"
homepage = "https://github.com/risinglightdb/sqllogictest-rs"
keywords = ["sql", "database", "parser", "cli"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/risinglightdb/sqllogictest-rs"

# Each dependency is pinned with it's minor version.
# Update of minor version must be done *manually*.
# Update of patch version can be done with `cargo vendor`. 
[workspace.dependencies]
anyhow = "1.0.0"
async-trait = "0.1.0"
bytes = "1.10.0"
chrono = "0.4.0"
clap = "4.5.0"
console = "0.15.0" # TODO update to 0.16
easy-ext = "1.0.0"
educe = "0.6.0"
fs-err = "3.1.0"
futures = { version = "0.3.0", default-features = false }
glob = "0.3.0"
humantime = "2.3.0"
itertools = "0.13.0" # TODO update to 0.14
libtest-mimic = "0.8.0"
log = "0.4.0"
md-5 = "0.10.0"
mysql_async = { version = "0.34.2", default-features = false } # TODO update to 0.36
pg_interval = "0.4.0"
postgres_array = "0.11.0"
postgres-types = "0.2.8" # TODO update to 0.2.11
owo-colors = "4.2.0"
quick-junit = "0.5.0"
rand = "0.8.5" # TODO update to 0.9
regex = "1.11.0"
rust_decimal = "1.36.0" # TODO update to 1.38
similar = "2.7.0"
serde = "1.0.0"
serde_json = "1.0.0"
subst = "0.3.0"
tempfile = "3.23.0"
thiserror = "2.0.0"
tokio = "1.47.0"
tokio-postgres = "0.7.15"
tokio-util = "0.7.12"
tracing = "0.1.0"
tracing-subscriber = "0.3.0"