[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = { workspace = true }
regex = "1.11.1"
rusty-fork = "0.3"
sqllogictest = { path = "../sqllogictest" }
tokio = { workspace = true, features = ["rt", "macros"] }

[[test]]
name = "harness"
path = "./harness.rs"
harness = false

[[test]]
name = "custom_type"
path = "./custom_type/custom_type.rs"

[[test]]
name = "validator"
path = "./validator/validator.rs"

[[test]]
name = "test_dir_escape"
path = "./test_dir_escape/test_dir_escape.rs"

[[test]]
name = "system_command"
path = "./system_command/system_command.rs"

[[test]]
name = "substitution"
path = "./substitution/substitution.rs"

[[test]]
name = "let_test"
path = "./let/let_test.rs"

[[test]]
name = "async"
path = "./async/async.rs"
